--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /package-lock.json
 /computer_graphics_scam-win32-x64/
+/computer_graphics_scam-linux-x64.tar.gz
+/computer_graphics_scam-win32-x64.zip
