--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup node
         uses: actions/setup-node@v3
+        with:
+          node-version: 10
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
         with:
